install/manifests/album-store-k3d-pod.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: "album-store"
  name: "album-store"
  annotations:
    prometheus.io/probe: "true"
    prometheus.io/probe-path: /status
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "9080"
  labels:
    app.kubernetes.io/instance: "album-store"
    app.kubernetes.io/name: "album-store"
    app.kubernetes.io/version: "0.1.0"
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - protocol: TCP
      name: http
      port: 9080
      targetPort: 9080
  selector:
    app.kubernetes.io/instance: "album-store"
    app.kubernetes.io/name: "album-store"
    app.kubernetes.io/version: "0.1.0"
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    test:
      "album-store"
    app.kubernetes.io/component: "album-store"
    app.kubernetes.io/instance: "album-store"
    app.kubernetes.io/name: "album-store"
    app.kubernetes.io/version: "0.1.0"
  name: "album-store"
  namespace: "album-store"
spec:
  containers:
    - name: "album-store"
      image: registry.local:54094/album-store:0.1 # use the cluster internal name to reference registry
      imagePullPolicy: Always
      ports:
        - name: http
          containerPort: 9080
          protocol: TCP
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
      livenessProbe:
        httpGet:
          path: /status
          port: http
        initialDelaySeconds: 1
        periodSeconds: 5
  dnsPolicy: ClusterFirst # must be `ClusterFirst` to allow nginx to route to it via the ingress
  restartPolicy: Always
  terminationGracePeriodSeconds: 30
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-port-in-redirects: "true"
    app.kubernetes.io/name: "album-store"
  labels:
    app.kubernetes.io/instance: "album-store"
    app.kubernetes.io/name: "album-store"
    app.kubernetes.io/version: "0.1.0"
  name: "album-store"
  namespace: "album-store"
spec:
  ingressClassName: nginx
  rules:
    - host: album-store.local
      http:
        paths:
          - backend:
              service:
                name: album-store
                port:
                  number: 9080
            path: /
            pathType: ImplementationSpecific
